cloud/service-kickchain-local.yml
apiVersion: v1
kind: Service
metadata:
  name: kickchain-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: kickchain-demo
  type: NodePort
