cloud/ingress-kickchain-local.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kickchain-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: localhost
  - http:
      paths:
      - path: /kickchain
        backend:
          serviceName: kickchain-service
          servicePort: 8080
